fixing tenant issues